<resources>
    <string name="app_name">Info Keeper</string>
    <string name="name_cannot_be_empty">Name cannot be empty!</string>
    <string name="name_too_long">"Name cannot be more than 20 characters!"</string>
    <string name="empty" />
    <string name="age_cannot_be_empty">Age cannot be empty!</string>
    <string name="age_cannot_be_zero">Age cannot be zero!</string>
    <string name="age_too_high">Age cannot be more than 100!</string>
    <string name="invalid_job_title">Invalid job title!</string>
    <string name="job_title_too_long">Job title cannot be more than 50 characters!</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="android_developer">Android Developer</string>
    <string name="ios_developer">IOS Developer</string>
    <string name="frontend_developer">Frontend Developer</string>
    <string name="backend_developer">Backend Developer</string>
    <string name="java_developer">Java Developer</string>
    <string name="python_developer">Python Developer</string>
    <string name="qa_tester">QA Tester</string>
    <string name="ui_ux_designer">UIUX Designer</string>
    <string name="product_manager">Product Manager</string>
    <string name="scrum_master">Scrum Master</string>
    <string name="other">Other</string>
    <string name="invalid_gender">Invalid gender!</string>
    <string name="not_selected">Not Selected</string>
    <string name="general_error">Something went wrong, Please try again!</string>
    <string name="name">Name</string>
    <string name="job_title">Job Title</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="info_keeper">Info Keeper</string>
    <string name="info_list">Info List</string>
    <string name="age_label">Age: %1$s</string>
    <string name="gender_label">Gender: %1$s</string>
    <string name="skip">Skip</string>
    <string name="empty_list">No persons available</string>
    <string name="person_deleted">Person deleted</string>
    <string name="open_compose">Open Compose</string>
    <string name="open_views">Open Views</string>
    <string name="age_gender">Age: %1$s, Gender: %2$s</string>
</resources>